<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/STR_PLACEHOLDER_ITEM_NAME"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="true"/>

        <EditText
            android:id="@+id/edit_list_item_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/STR_PLACEHOLDER"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:inputType="text"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/food_tag_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_FOOD" />

            <CheckBox
                android:id="@+id/clothing_tag_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_CLOTHING" />

            <CheckBox
                android:id="@+id/entertainment_tag_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_ENTERTAINMENT" />

            <CheckBox
                android:id="@+id/electronics_tag_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_ELECTRONICS" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/edit_list_item_btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/STR_SAVE"
                android:layout_weight="0.5"
                android:background="?android:attr/windowBackground"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/edit_list_item_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/STR_CANCEL"
                android:layout_weight="0.5"
                android:background="?android:attr/windowBackground"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
