<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/STR_HOME"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_home_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:background="?android:attr/windowBackground" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/STR_LIST"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_view_list_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:background="?android:attr/windowBackground" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/STR_MAP"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_map_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:background="?android:attr/windowBackground" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/STR_ABOUT"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_lightbulb_outline_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:background="?android:attr/windowBackground" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>