<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="14dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/STR_LIST_NAME"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edit_list_list_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/STR_LIST_ITEMS"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark" />

        <ListView
            android:id="@+id/edit_list_list_items"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/edit_list_add_new_list_item"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="?android:attr/windowBackground"
                android:layout_margin="20dp"
                android:text="@string/add_new_item"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save_list"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="?android:attr/windowBackground"
                android:layout_margin="20dp"
                android:text="@string/STR_SAVE"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>